--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "babel-core": "^5.8.21",
     "babel-loader": "^5",
     "css-loader": "^0.21.0",
+    "material-ui": "^0.11",
     "node-sass": "^3.4.1",
     "react": "^0.14.2",
+    "react-addons-create-fragment": "^0.14.2",
+    "react-addons-pure-render-mixin": "^0.14.2",
+    "react-addons-transition-group": "^0.14.2",
+    "react-addons-update": "^0.14.2",
+    "react-dom": "^0.14.2",
     "react-hot-loader": "^1.3.0",
+    "react-tap-event-plugin": "^0.2.1",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2"
