--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "babel-core": "^5.8.21",
     "babel-loader": "^5",
     "css-loader": "^0.21.0",
+    "firebase": "^2.3.1",
+    "lodash": "^3.10.1",
     "material-ui": "^0.11",
     "node-sass": "^3.4.1",
     "react": "^0.14.2",
@@ -24,6 +26,7 @@
     "react-tap-event-plugin": "^0.2.1",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
+    "trim": "0.0.1",
     "webpack": "^1.12.2"
   }
 }
