--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alt": "^0.17.8",
     "babel-core": "^5.8.21",
     "babel-loader": "^5",
     "css-loader": "^0.21.0",
