--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-addons-update": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-hot-loader": "^1.3.0",
+    "react-router": "^0.13.5",
     "react-tap-event-plugin": "^0.2.1",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
